[gd_scene load_steps=4 format=3 uid="uid://c5nh6oaqv4rgh"]

[ext_resource type="Script" uid="uid://cdtxh5t1dn3sk" path="res://ui/blocks/scripts/loop_action_button.gd" id="2_xrifb"]
[ext_resource type="Texture2D" uid="uid://bc1onw57isu1i" path="res://assets/JuaneBtns/Top_Loop_Initial.png" id="3_7jxp6"]
[ext_resource type="Texture2D" uid="uid://dpn5sglj0vs26" path="res://assets/JuaneBtns/Top_Loop_Focus.png" id="4_40qfk"]

[node name="Top_Loop_Block" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 178.0
offset_bottom = 66.0

[node name="Action_Button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(175, 55)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_xrifb")

[node name="Initial_Top" type="Polygon2D" parent="Action_Button"]
scale = Vector2(1.15, 1.15)
texture = ExtResource("3_7jxp6")
polygon = PackedVector2Array(0.052610397, 4.978428, 1.0006027, 3.3984404, 2.2645912, 2.450448, 3.4232502, 1.0811253, 4.8979053, 0.5544634, 15.536486, 0.5544634, 18.064466, 1.1864576, 18.807758, 2.5061038, 19.579353, 3.805631, 20.350945, 4.7802763, 20.87888, 5.5924816, 21.772305, 6.6077375, 22.219017, 7.541772, 23.112442, 8.557028, 23.640373, 8.92252, 38.057003, 8.96313, 38.782883, 8.557182, 39.51387, 7.663758, 40.082413, 6.770333, 40.772785, 5.511416, 41.82865, 4.0074196, 42.356583, 3.1139946, 42.965736, 2.261179, 43.899773, 1.4083648, 44.508926, 0.799211, 45.483574, 0.06822729, 148.45264, -0.1348238, 149.26485, 0.43371916, 150.11766, 1.0834827, 151.0923, 1.9362974, 151.74207, 2.8703327, 152.51367, 3.8449783, 152.87915, 4.7790136, 153.0416, 46.25158, 152.7167, 47.266838, 152.18878, 48.03843, 151.70146, 48.891247, 151.01108, 49.74406, 149.91461, 50.718704, 147.92227, 51.69335, 55.872597, 51.774574, 55.019775, 52.64687, 53.724663, 53.749596, 52.81177, 54.840706, 52.17073, 55.910667, 51.319595, 56.957806, 50.373142, 57.96937, 49.361244, 59.08531, 48.251835, 60.159763, 29.52258, 59.941483, 28.588543, 58.343727, 27.686234, 56.687595, 26.67859, 55.427406, 25.387949, 54.014935, 23.497036, 52.5352, 5.8816757, 52.794083, 4.4197073, 52.10371, 3.7699442, 51.45395, 2.9171295, 50.885406, 1.8612633, 49.95137, 0.7241764, 49.139164, -0.04741764, 48.44879)
uv = PackedVector2Array(0.052610397, 4.978428, 1.0006027, 3.3984404, 2.2645912, 2.450448, 3.4232502, 1.0811253, 4.8979053, 0.5544634, 15.536486, 0.5544634, 18.064466, 1.1864576, 18.807758, 2.5061038, 19.579353, 3.805631, 20.350945, 4.7802763, 20.87888, 5.5924816, 21.772305, 6.6077375, 22.219017, 7.541772, 23.112442, 8.557028, 23.640373, 8.92252, 38.057003, 8.96313, 38.782883, 8.557182, 39.51387, 7.663758, 40.082413, 6.770333, 40.772785, 5.511416, 41.82865, 4.0074196, 42.356583, 3.1139946, 42.965736, 2.261179, 43.899773, 1.4083648, 44.508926, 0.799211, 45.483574, 0.06822729, 148.45264, -0.1348238, 149.26485, 0.43371916, 150.11766, 1.0834827, 151.0923, 1.9362974, 151.74207, 2.8703327, 152.51367, 3.8449783, 152.87915, 4.7790136, 153.0416, 46.25158, 152.7167, 47.266838, 152.18878, 48.03843, 151.70146, 48.891247, 151.01108, 49.74406, 149.91461, 50.718704, 147.92227, 51.69335, 55.872597, 51.774574, 55.019775, 52.64687, 53.724663, 53.749596, 52.81177, 54.840706, 52.17073, 55.910667, 51.319595, 56.957806, 50.373142, 57.96937, 49.361244, 59.08531, 48.251835, 60.159763, 29.52258, 59.941483, 28.588543, 58.343727, 27.686234, 56.687595, 26.67859, 55.427406, 25.387949, 54.014935, 23.497036, 52.5352, 5.8816757, 52.794083, 4.4197073, 52.10371, 3.7699442, 51.45395, 2.9171295, 50.885406, 1.8612633, 49.95137, 0.7241764, 49.139164, -0.04741764, 48.44879)

[node name="Focus_Top" type="Polygon2D" parent="Action_Button"]
scale = Vector2(1.15, 1.15)
texture = ExtResource("4_40qfk")
polygon = PackedVector2Array(0.052610397, 4.978428, 1.0006027, 3.3984404, 2.2645912, 2.450448, 3.4232502, 1.0811253, 4.8979053, 0.5544634, 15.536486, 0.5544634, 18.064466, 1.1864576, 18.807758, 2.5061038, 19.579353, 3.805631, 20.350945, 4.7802763, 20.87888, 5.5924816, 21.772305, 6.6077375, 22.219017, 7.541772, 23.112442, 8.557028, 23.640373, 8.92252, 38.057003, 8.96313, 38.782883, 8.557182, 39.51387, 7.663758, 40.082413, 6.770333, 40.772785, 5.511416, 41.82865, 4.0074196, 42.356583, 3.1139946, 42.965736, 2.261179, 43.899773, 1.4083648, 44.508926, 0.799211, 45.483574, 0.06822729, 148.45264, -0.1348238, 149.26485, 0.43371916, 150.11766, 1.0834827, 151.0923, 1.9362974, 151.74207, 2.8703327, 152.51367, 3.8449783, 152.87915, 4.7790136, 153.0416, 46.25158, 152.7167, 47.266838, 152.18878, 48.03843, 151.70146, 48.891247, 151.01108, 49.74406, 149.91461, 50.718704, 147.92227, 51.69335, 55.872597, 51.774574, 55.019775, 52.64687, 53.724663, 53.749596, 52.81177, 54.840706, 52.17073, 55.910667, 51.319595, 56.957806, 50.373142, 57.96937, 49.361244, 59.08531, 48.251835, 60.159763, 29.52258, 59.941483, 28.588543, 58.343727, 27.686234, 56.687595, 26.67859, 55.427406, 25.387949, 54.014935, 23.497036, 52.5352, 5.8816757, 52.794083, 4.4197073, 52.10371, 3.7699442, 51.45395, 2.9171295, 50.885406, 1.8612633, 49.95137, 0.7241764, 49.139164, -0.04741764, 48.44879)
uv = PackedVector2Array(0.052610397, 4.978428, 1.0006027, 3.3984404, 2.2645912, 2.450448, 3.4232502, 1.0811253, 4.8979053, 0.5544634, 15.536486, 0.5544634, 18.064466, 1.1864576, 18.807758, 2.5061038, 19.579353, 3.805631, 20.350945, 4.7802763, 20.87888, 5.5924816, 21.772305, 6.6077375, 22.219017, 7.541772, 23.112442, 8.557028, 23.640373, 8.92252, 38.057003, 8.96313, 38.782883, 8.557182, 39.51387, 7.663758, 40.082413, 6.770333, 40.772785, 5.511416, 41.82865, 4.0074196, 42.356583, 3.1139946, 42.965736, 2.261179, 43.899773, 1.4083648, 44.508926, 0.799211, 45.483574, 0.06822729, 148.45264, -0.1348238, 149.26485, 0.43371916, 150.11766, 1.0834827, 151.0923, 1.9362974, 151.74207, 2.8703327, 152.51367, 3.8449783, 152.87915, 4.7790136, 153.0416, 46.25158, 152.7167, 47.266838, 152.18878, 48.03843, 151.70146, 48.891247, 151.01108, 49.74406, 149.91461, 50.718704, 147.92227, 51.69335, 55.872597, 51.774574, 55.019775, 52.64687, 53.724663, 53.749596, 52.81177, 54.840706, 52.17073, 55.910667, 51.319595, 56.957806, 50.373142, 57.96937, 49.361244, 59.08531, 48.251835, 60.159763, 29.52258, 59.941483, 28.588543, 58.343727, 27.686234, 56.687595, 26.67859, 55.427406, 25.387949, 54.014935, 23.497036, 52.5352, 5.8816757, 52.794083, 4.4197073, 52.10371, 3.7699442, 51.45395, 2.9171295, 50.885406, 1.8612633, 49.95137, 0.7241764, 49.139164, -0.04741764, 48.44879)

[node name="Loop_Count" type="Label" parent="Action_Button"]
layout_mode = 0
offset_left = 116.0
offset_right = 159.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 42
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1

[connection signal="focus_entered" from="Action_Button" to="Action_Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Action_Button" to="Action_Button" method="_on_focus_exited"]
[connection signal="pressed" from="Action_Button" to="Action_Button" method="_on_pressed"]
